--- a/environment_window.yml
+++ b/environment_window.yml
@@ -1,4 +1,4 @@
-name: MARL_STUDY
+name: gaze_window
 channels:
   - pytorch
   - conda-forge
@@ -135,9 +135,6 @@ dependencies:
       - google==3.0.0
       - gpytorch==1.11
       - grpcio==1.64.1
-      - gym==0.21.0
-      - gym-notices==0.0.8
-      - gymnasium==0.29.1
       - h11==0.16.0
       - httpcore==1.0.9
       - httpx==0.28.1
