--- a/keymap/config.yaml
+++ b/keymap/config.yaml
@@ -2,6 +2,6 @@
 0: [["pagedown", 1], ["down", 5]]       # Right
 1: [["pageup", 1], ["up", 5]]           # Left
 2: null                                 # Center (초기화)
-3: null                                 # Left_Close
-4: null                                 # Right_Close
+3: [["ctrl+alt+g", 1], ["ctrl+c", 1]]   # Left_Close
+4: [["ctrl+alt+g", 1], ["ctrl+v", 1], ["enter", 1]]   # Right_Close
 5: [["ctrl+\\", 1]]                     # Close
