--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ultralytics"]
 	path = ultralytics
 	url = https://github.com/ultralytics/ultralytics.git
+[submodule "externals/ultralytics"]
+	path = externals/ultralytics
+	url = https://github.com/ultralytics/ultralytics.git
